fix receivePanel layout bug

--- a/app/components/Receive/ReceivePanel/styles.scss
+++ b/app/components/Receive/ReceivePanel/styles.scss
@@ -8,7 +8,7 @@
 }
 
 .receivePanel {
-  height: 100%;
+  // height: 100%;
 }
 
 .receivePanelContent {
@@ -59,7 +59,7 @@
   background: var(--panel-background);
 
   ul {
-    margin-bottom: 12px !important;
+    margin-bottom: 0px !important;
     margin: 14px auto;
     padding-bottom: 15px !important;
     padding-left: 0;
